# lojix-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix  result  skills.md
.beads/: metadata.json
docs/: basic-usage.md
reports/: 0001-full-work-survey-and-reading-order.md  0001-three-deploy-kind-split.md  0002-code-standards-remediation.md  0003-direct-home-deploy.md  0004-published-generated-inputs.md  0004-pure-local-generated-inputs.md  0005-handoff-pure-inputs-direct-home.md  0006-archive-hosting-review.md  0007-remote-generated-input-staging.md  0008-third-party-builder-copy-topology.md
schema/: lojix-cli.concept.schema
src/: activate.rs  artifact.rs  build.rs  check.rs  cluster.rs  copy.rs  deploy.rs  error.rs  host.rs  lib.rs  main.rs  process.rs  project.rs  proposal.rs  publish.rs  request.rs  stage.rs
tests/: argv.rs  builder_validation.rs  check_host_key_material.rs  eval.rs  invocation.rs  network_neutrality.rs  request.rs  substituter.rs
