[package]
name    = "lojix-cli"
version = "0.1.0"
edition = "2024"
description = "CriomOS deploy CLI."
license-file = "LICENSE.md"
repository = "https://github.com/LiGoldragon/lojix-cli"

[[bin]]
name = "lojix-cli"
path = "src/main.rs"

[dependencies]
horizon-lib = { git = "https://github.com/LiGoldragon/horizon-rs" }
nota-next   = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
clavifaber  = { git = "https://github.com/LiGoldragon/clavifaber.git" }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
thiserror   = "2"
tempfile    = "3"
serde_json  = "1"
process-wrap = { version = "9.1.0", features = ["tokio1", "process-group", "kill-on-drop"] }

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
